@@ -54,8 +54,6 @@ sourceSets {
 }
 
 test {
-    jvmArgs '-ea', '-Xbootclasspath/p:../out/classes/production/boot', '-XX:+HeapDumpOnOutOfMemoryError', '-Xmx512m', '-XX:MaxPermSize=320m', '-Didea.system.path=../test-system', '-Didea.home.path=../', '-Didea.config.path=../test-config', '-Didea.test.group=ALL_EXCLUDE_DEFINED'
-    
     testLogging {
         events 'skipped', 'failed'
         exceptionFormat = 'full'
